--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Travel App</h1>
 <app-navbar></app-navbar>
-<app-dashboard></app-dashboard>
+<div class="container">
+  <app-dashboard></app-dashboard>
+
+</div>
