add new components

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,9 +1,2 @@
-<div class="jumbotron mt-4">
-    <h1 class="display-4">Hello, travellers!</h1>
-    <p class="lead">Where your next journey will take you?</p>
-    <hr class="my-4">
-    <p>Chose from many different trips:</p>
-    <p class="lead">
-      <a class="btn btn-primary btn-lg" href="#" role="button">Look for Trips!</a>
-    </p>
-  </div>
+<app-date-picker></app-date-picker>
+<h2>Dashboard</h2>
