--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,6 +4,6 @@
   <hr class="my-4">
   <p>Chose from many different trips:</p>
   <p class="lead">
-    <a class="btn btn-primary btn-lg" href="#" role="button">Look for Trips!</a>
+    <a class="btn btn-primary btn-lg" href="dashboard" role="button">Look for Trips!</a>
   </p>
 </div>
