--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,4 @@
 <app-navbar></app-navbar>
 <div class="container">
-  <app-home></app-home>
-  <app-dashboard></app-dashboard>
-
+  <router-outlet></router-outlet>
 </div>
