--- a/src/app/dashboard/date-picker/date-picker.component.html
+++ b/src/app/dashboard/date-picker/date-picker.component.html
@@ -1,3 +1,9 @@
-<p>
-  date-picker works!
-</p>
+<div class="row mt-4 mr-4 flex justify-content-end">
+  <div class="col-xs-12 col-12 col-md-4 form-group ">
+    <input class="form-control"
+    [bsConfig]="bsConfig" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="rangeDates">
+  </div>
+  <div class="col-xs-12 col-12 col-md-3 form-group">
+    <button class="btn btn-primary" (click)="drp.toggle()" [attr.aria-expanded]="drp.isOpen">Set Range </button>
+  </div>
+</div>
