add json-server and mock api

--- a/src/app/dashboard/date-picker/date-picker.component.html
+++ b/src/app/dashboard/date-picker/date-picker.component.html
@@ -4,6 +4,6 @@
     [bsConfig]="bsConfig" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="rangeDates">
   </div>
   <div class="col-xs-12 col-12 col-md-3 form-group">
-    <button class="btn btn-primary" (click)="drp.toggle()" [attr.aria-expanded]="drp.isOpen">Set Range </button>
+    <button class="btn btn-primary" (click)="drp.toggle()" [attr.aria-expanded]="drp.isOpen">Set Dates Range </button>
   </div>
 </div>
