fix test, add trip  observer in dashboard html

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,3 +1,5 @@
 <app-date-picker (rangeEmitter)="onDatesChange($event)"></app-date-picker>
 <p class="mt-4 text-center">view component</p>
- 
+<div *ngFor="let trip of (trips$ | async)">
+  {{trip.name}}
+</div>
