--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,7 @@
 <app-date-picker (rangeEmitter)="onDatesChange($event)"></app-date-picker>
 <p class="mt-4 text-center">view component</p>
 <div *ngIf="isLoading$ | async">loading...</div>
+<app-communicate></app-communicate>
 <div *ngFor="let trip of (trips$ | async)">
   {{trip.name}}
 </div>
