--- a/src/app/dashboard/trip/trip.component.html
+++ b/src/app/dashboard/trip/trip.component.html
@@ -1,3 +1,8 @@
-<p>
-  trip works!
-</p>
+<div class="card m-4 p-1" style="width: 18rem;">
+  <img class="card-img-top" src={{trip.image}} alt="Card image cap">
+  <div class="card-body">
+    <h5 class="card-title">{{trip.name}}</h5>
+    <p class="card-text">Town: {{trip.city}}</p>
+    <a href="#" class="btn btn-primary">Check it out!</a>
+  </div>
+</div>
