--- a/src/app/dashboard/trip/trip.component.html
+++ b/src/app/dashboard/trip/trip.component.html
@@ -3,6 +3,9 @@
   <div class="card-body">
     <h5 class="card-title">{{trip.name}}</h5>
     <p class="card-text">Town: {{trip.city}}</p>
+    <p class="card-text">Price: {{trip.price}}</p>
+    <p class="card-text">From: {{trip.startDate}} - To: {{trip.endDate}}</p>
+
     <a href="#" class="btn btn-primary">Check it out!</a>
   </div>
 </div>
