creates trip service and trip details component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,5 @@
 <app-navbar></app-navbar>
+<div *ngIf="isLoading$ | async">loading...</div>
 <div class="container">
   <router-outlet></router-outlet>
 </div>
