--- a/src/app/dashboard/trip/trip.component.html
+++ b/src/app/dashboard/trip/trip.component.html
@@ -6,6 +6,6 @@
     <p class="card-text">Price: {{trip.price}}</p>
     <p class="card-text">From: {{trip.startDate}} - To: {{trip.endDate}}</p>
 
-    <a routerLink="/trip/{{trip.id}}" class="btn btn-primary">Check it out!</a>
+    <a [routerLink]="['/trip', trip.id]" class="btn btn-primary">Check it out!</a>
   </div>
 </div>
