--- a/src/app/shared/loader/loader.component.css
+++ b/src/app/shared/loader/loader.component.css
@@ -1,9 +1,11 @@
 .loader {
   background-color: #007bff;
   opacity: 0.2;
-  position: relative;
-
-  width: 100%;
-  height: 100vh;
-  z-index: 100000;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 50px;
+  height: 50px;
+  z-index: 100;
+  transform: translate(-50%, -50%);
 }
