--- a/src/app/trip-details/trip-form/trip-form.component.html
+++ b/src/app/trip-details/trip-form/trip-form.component.html
@@ -2,6 +2,7 @@
   <div class="form_modal bg-light">
     <div class="">
       FORM
+      <button (click)="onCloseClick()" class="btn btn-danger">Close</button>
     </div>
   </div>
 </div>
