add routing to modal and clean up excess code

--- a/src/app/trip-details/trip-details.component.html
+++ b/src/app/trip-details/trip-details.component.html
@@ -1,5 +1,7 @@
 <div *ngIf="(trip$ | async) as trip">
-  <app-trip-form (close)="closeFormModal($event)" *ngIf="showForm"></app-trip-form>
+  <router-outlet></router-outlet>
+
+  <!-- <app-trip-form (close)="closeFormModal()" *ngIf="showForm"></app-trip-form> -->
   <div class="card m-1 p-1 w-100" style="width: 18rem;">
     <img class="card-img-top" src={{trip.image}} alt="Card image cap">
     <div class="card-body">
@@ -11,6 +13,6 @@
   </div>
 </div>
 <a [routerLink]="['/dashboard']" class="btn btn-primary m-1">
-  << Go Back</a> <button (click)="openFormModal()" class="btn btn-success m-1">
+  << Go Back</a> <a [routerLink]="['trip-form']" class="btn btn-success m-1">
     Book this trip
-    </button>
+</a>
