sets up basic form modal

--- a/src/app/trip-details/trip-form/trip-form.component.html
+++ b/src/app/trip-details/trip-form/trip-form.component.html
@@ -1,19 +1,38 @@
 <div class="form_modal_background">
   <div class="form_modal bg-light">
     <div class="container">
-
-      <form formGroup="travelForm">
-        <div class="form-group">
-          <h4>Personal Data:</h4>
-          <label>
-            First Name:
-            <input type="text" formControlName="firstName">
-          </label>
-
-          <label>
-            Last Name:
-            <input type="text" formControlName="lastName">
-          </label>
+      <div class="display-4 my-3">
+        Header</div>
+      <form [formGroup]="travelForm">
+        <div class="py-2" formGroupName="tripDetails">
+          <h4 class="my-2">Chose Trip Options:</h4>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input type="checkbox" class="form-check-input" formControlName="upgrade">
+              I want upgrade my Trip!
+            </label>
+          </div>
+        </div>
+        <div class="py-2" formGroupName="personalData">
+          <h4 class="my-2">Personal Data:</h4>
+          <div class="form-group">
+            <label>
+              First Name:
+              <input type="text" class="form-control" formControlName="firstName">
+            </label>
+          </div>
+          <div class="form-group">
+            <label>
+              Last Name:
+              <input type="text" class="form-control" formControlName="lastName">
+            </label>
+          </div>
+          <div class="form-group">
+            <label>
+              Email:
+              <input type="email" class="form-control" formControlName="email">
+            </label>
+          </div>
         </div>
       </form>
 
