--- a/src/app/trip-details/trip-form/trip-form.component.css
+++ b/src/app/trip-details/trip-form/trip-form.component.css
@@ -9,11 +9,13 @@
 }
 
 .form_modal {
+  padding: 10px;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(52, 74, 99, 0.719);
   position: relative;
-  width: 20%;
+  width: 80%;
   display: block;
   top: 50%;
   left: 50%;
-  /* bring your own prefixes */
   transform: translate(-50%, -50%);
 }
