add submit button

--- a/src/app/trip-details/trip-form/trip-form.component.html
+++ b/src/app/trip-details/trip-form/trip-form.component.html
@@ -34,9 +34,9 @@
             </label>
           </div>
         </div>
+        <button type="submit" class="btn btn-success mr-2">Submit Order</button>
+        <a [routerLink]="['../']" class="btn btn-danger">Close</a>
       </form>
-
-      <a [routerLink]="['../']" class="btn btn-danger">Close</a>
     </div>
   </div>
 </div>
