add current trip service

--- a/src/app/trip-details/trip-form/trip-form.component.html
+++ b/src/app/trip-details/trip-form/trip-form.component.html
@@ -1,8 +1,8 @@
 <div class="form_modal_background">
   <div class="form_modal bg-light">
     <div class="container">
-      <div class="display-4 my-3">
-        Header</div>
+      <div class="display-4 my-3" *ngIf="(trip$ | async) as trip">
+        {{trip.name}}</div>
       <form [formGroup]="travelForm">
         <div class="py-2" formGroupName="tripDetails">
           <h4 class="my-2">Chose Trip Options:</h4>
