--- a/src/app/trip-details/trip-details.component.html
+++ b/src/app/trip-details/trip-details.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="(trip$ | async) as trip">
-  <router-outlet></router-outlet>
+  <router-outlet (travelRequest)="newTravelRequest(event$)"></router-outlet>
   <div class="card m-1 p-1 w-100" style="width: 18rem;">
     <img class="card-img-top" src={{trip.image}} alt="Card image cap">
     <div class="card-body">
