--- a/src/app/summary-page/summary-page.component.html
+++ b/src/app/summary-page/summary-page.component.html
@@ -1,8 +1,10 @@
 <div *ngIf="(summary$ | async) as summary; else loading">
   <div class="alert alert-success" role="alert">Your order was successfully send</div>
   <div class="container">
-    <div> Order Summary:
-    </div>
+    <h5> Order Summary:</h5>
+    <div>You chose trip: {{summary.tripDetails.tripName}}</div>
+    <div>You pay today: {{summary.tripDetails.price}}</div>
+    <h5> Your Details:</h5>
     <div>{{summary.personalData.firstName}}</div>
     <div>{{summary.personalData.lastName}}</div>
     <div>{{summary.personalData.email}}</div>
