implemented filter function

--- a/src/app/dashboard/date-picker/date-picker.component.html
+++ b/src/app/dashboard/date-picker/date-picker.component.html
@@ -1,7 +1,7 @@
 <div class="row mt-4 mr-4 flex justify-content-end">
   <div class="col-xs-12 col-12 col-md-4 form-group ">
-    <input class="form-control"
-    [bsConfig]="bsConfig" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="rangeDates" (change)="emitDateRangeToDashboard()">
+    <input class="form-control" [bsConfig]="bsConfig" #drp="bsDaterangepicker" bsDaterangepicker [(ngModel)]="rangeDates"
+      (change)="emitDateRangeToDashboard()">
   </div>
   <div class="col-xs-12 col-12 col-md-3 form-group">
     <button class="btn btn-primary" (click)="drp.toggle()" [attr.aria-expanded]="drp.isOpen">Set Dates Range </button>
